--- a/client/src/components/Input/Input.module.scss
+++ b/client/src/components/Input/Input.module.scss
@@ -18,7 +18,7 @@
     width: 360px;
     height: 60px;
     font-size: 16px;
-    color: #fff;
+    color: #000000;
     padding: 0 15px;
     background: transparent;
     border: 1.2px solid rgb(0, 0, 0);
